<resources>
    <string name="app_name">Consolidated</string>
    <string name="main_activity_explanatory_text">This application contains everything I\'ve learned, the list below sends the user to different activities that works like a showcase.</string>
    <string name="activity_button_showcase_explanatory_text">This activity shows different types of buttons and their uses.
        \n
        \nTo return, tap the return button or tap your phone \"back\" button.</string>
    <string name="activity_text_view_showcase_explanatory_text">This activity shows a simple TextView which can\'t be edited by the user and  a editText where the user can type.
        \n
        \nTo return, tap the return button or tap your phone \"back\" button.</string>
    <string name="return_button">Return</string>
    <string name="insert_text_here">Insert text here.</string>
    <string name="button">Button</string>
    <string name="checkbox">Checkbox</string>
    <string name="radio_button_1">Radio Button 1</string>
    <string name="radio_button_2">Radio Button 2</string>
    <string name="radio_button_3">Radio Button 3</string>
    <string name="activity_information_transfer_showcase_explanatory_text">This activity allows the user to type a text and send to another activity by pressing "send".
        \n
        \nTo return, tap the return button or tap your phone \"back\" button.</string>
    <string name="send_button">Send</string>
    <string name="activity_alert_dialog_showcase_explanatory_text">This activity shows an example of Alert Dialog when the user press the button \"Alert Dialog\".
        \n
        \nTo return, tap the return button or tap your phone \"back\" button.</string>
    <string name="alert_dialog_button">Alert dialog</string>
    <string name="activity_seek_bar_showcase_explanatory_text">This activity shows an example of SeekBar which change the text of the TextView below to inform  it's position.
        \n
        \nTo return, tap the return button or tap your phone \"back\" button.</string>
    <string name="activity_media_player_showcase_explanatory_text">This activity shows a simple media player controlled by the buttons below.
        \n
        \nTo return, tap the return button or tap your phone \"back\" button.</string>
    <string name="pause_toggle_button">Pause</string>
    <string name="play_toggle_button">Play</string>
    <string name="stop_button">Stop</string>
</resources>
