<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MediaPlayerShowcase">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/explanatoryTextId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_media_player_showcase_explanatory_text"
            android:textAllCaps="false"
            android:textColor="@color/Black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="167dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/playPauseButtonId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/play_toggle_button"
                android:textOn="@string/pause_toggle_button"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="244dp" />

            <Button
                android:id="@+id/stopButtonId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_button"
                tools:layout_editor_absoluteX="228dp"
                tools:layout_editor_absoluteY="243dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/returnButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="162dp"
        android:layout_marginLeft="161dp"
        android:layout_marginRight="162dp"
        android:layout_marginStart="161dp"
        android:text="@string/return_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>